<resources>
    <string name="app_name">WillStore</string>
    <string name="monitor_gamer_asus_tuf_27_ips_280_hz_full_hd_1ms_g_sync_hdr_400_99_srgb">Monitor Gamer Asus TUF 27\' IPS, 280 Hz, Full HD, 1ms, G-Sync, HDR 400, 99% sRGB</string>
    <string name="r_500_00">R$ 500, 00</string>
    <string name="todo">TODO</string>
    <string name="logo">TODO</string>
    <string name="monitor_gamer">Monitor Gamer</string>
    <string name="ver_mais">Ver Mais</string>
    <string name="monitor_de_jogos_full_hd_1920_x_1080_de_27_polegadas_com_taxa_de_atualiza_o_ultrarr_pida_de_165_hz_projetado_para_jogadores_profissionais_e_jogabilidade_envolvente_a_tecnologia_asus_extreme_low_motion_blur_elmb_permite_um_tempo_de_resposta_de_1_ms_mprt_eliminando_fantasmas_para_visuais_n_tidos_de_jogos_o_shadow_boost_aprimora_os_detalhes_da_imagem_em_reas_escuras_iluminando_cenas_sem_expor_demais_as_reas_claras_processamento_compat_vel_com_g_sync_proporcionando_uma_experi_ncia_de_jogo_perfeita_e_sem_problemas_ao_habilitar_vrr_taxa_de_atualiza_o_vari_vel_por_padr_o_apresenta_um_suporte_ergonomicamente_projetado_para_oferecer_extensos_ajustes_de_rota_o_inclina_o_rota_o_e_altura">Monitor de jogos Full HD (1920 x 1080) de 27 polegadas com taxa de atualização ultrarrápida de 165 Hz projetado para jogadores profissionais e jogabilidade envolvente. A tecnologia ASUS Extreme Low Motion Blur (ELMB ?) permite um tempo de resposta de 1 ms (MPRT), eliminando fantasmas para visuais nítidos de jogos. O Shadow Boost aprimora os detalhes da imagem em áreas escuras, iluminando cenas sem expor demais as áreas claras. Processamento compatível com G-SYNC, proporcionando uma experiência de jogo perfeita e sem problemas ao habilitar VRR (taxa de atualização variável) por padrão. Apresenta um suporte ergonomicamente projetado para oferecer extensos ajustes de rotação, inclinação, rotação e altura.</string>
</resources>