<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00C2CB"
    android:orientation="vertical"
    android:padding="1dp">

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="30dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/img_monitor"
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:layout_margin="15dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/monitorgamer" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/monitor_gamer"
                    android:textColor="#545454"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_preco"
                    android:layout_width="107dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/r_500_00"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/button_desc"
                    android:layout_width="123dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00C2CB"
                    android:text="@string/ver_mais"
                    android:textColor="#545454"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>